@@ -1,3 +1,10 @@
+[b][color=orange]v4.05[/color], 27.12.2018[/b][list]
+[*]Various skin adjustments & fixes.
+[*]Use a nice glow around RaidBuffReminder & Buff Reminder.
+[*]Update Minimap Coords Position.
+[*]Removed my ShadowOverlay.
+[*]Added a CombatFeedBack Text to the UF's.[/list]
+
 [b][color=orange]v4.04[/color], 13.12.2018[/b][list]
 [*]Fixed an error in the LFGList skin.
 [*]Updated SpellBook skin.
